# Wikipedia-Bot

./: README.md  main.py  pyproject.toml
Data/: FamousPeople.csv
