[tool.poetry]
name = "repl_python3_Wikipedia-Bot"
version = "0.1.0"
description = ""
authors = ["YifengQin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
discord = "^1.0.1"
random-word = "^1.0.7"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
